[gd_scene load_steps=14 format=3 uid="uid://caaaqt4eljmn7"]

[ext_resource type="Theme" uid="uid://dfvn72ic701oj" path="res://resouces/themes/default.tres" id="1_frpny"]
[ext_resource type="Texture2D" uid="uid://ds1lj8t7hgr2p" path="res://assets/textures/ui/box/BGbox_02A.png" id="1_p3dg3"]
[ext_resource type="Script" uid="uid://dp4ykf63uftbw" path="res://scenes/ui/inventory_ui/inventory_panel.gd" id="2_lgxp6"]
[ext_resource type="PackedScene" uid="uid://d1ym8poumschk" path="res://scenes/ui/inventory_ui/inventory_slot.tscn" id="2_vc14d"]
[ext_resource type="Texture2D" uid="uid://bkdulxo40dqen" path="res://assets/textures/icons/Cancel.png" id="8_ax5r8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pww13"]
atlas = ExtResource("1_p3dg3")
region = Rect2(6, 6, 36, 36)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b2xk5"]
texture = SubResource("AtlasTexture_pww13")
texture_margin_left = 7.0
texture_margin_top = 8.0
texture_margin_right = 7.0
texture_margin_bottom = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ax5r8"]
atlas = ExtResource("1_p3dg3")
region = Rect2(6, 6, 36, 36)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yyvvw"]
texture = SubResource("AtlasTexture_ax5r8")
texture_margin_left = 7.0
texture_margin_top = 8.0
texture_margin_right = 7.0
texture_margin_bottom = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_yyvvw"]
atlas = ExtResource("1_p3dg3")
region = Rect2(6, 6, 36, 36)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0pji6"]
texture = SubResource("AtlasTexture_yyvvw")
texture_margin_left = 7.0
texture_margin_top = 8.0
texture_margin_right = 7.0
texture_margin_bottom = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0pji6"]
atlas = ExtResource("1_p3dg3")
region = Rect2(6, 6, 36, 36)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w5805"]
texture = SubResource("AtlasTexture_0pji6")
texture_margin_left = 7.0
texture_margin_top = 8.0
texture_margin_right = 7.0
texture_margin_bottom = 8.0

[node name="InventoryPanel" type="MarginContainer"]
offset_right = 238.0
offset_bottom = 302.0
theme_override_constants/margin_top = 18
theme_override_constants/margin_bottom = 44
script = ExtResource("2_lgxp6")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_frpny")
theme_override_styles/panel = SubResource("StyleBoxTexture_b2xk5")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = -26

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer2"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_yyvvw")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "物品栏"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InventoryGrid" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 5

[node name="InventorySlot" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot2" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot3" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot4" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot5" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot6" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot7" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot8" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot9" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot10" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot11" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot12" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot13" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot14" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot15" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot16" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot17" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot18" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot19" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="InventorySlot20" parent="PanelContainer/MarginContainer/VBoxContainer/InventoryGrid" instance=ExtResource("2_vc14d")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_0pji6")

[node name="DescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "这是一把斧子"

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = -50

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/focus = SubResource("StyleBoxTexture_w5805")
theme_override_styles/hover = SubResource("StyleBoxTexture_w5805")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w5805")
theme_override_styles/normal = SubResource("StyleBoxTexture_w5805")
icon = ExtResource("8_ax5r8")
icon_alignment = 1
expand_icon = true
